Fix z-index for Special:CategoryTree dropdown list
[3.1]

Please cherry-pick to master

--- a/resources/stylesheets/fixes/mobile.specialpages.less
+++ b/resources/stylesheets/fixes/mobile.specialpages.less
@@ -89,3 +89,9 @@ body.ns-special .mw-allpages-body {
 	-moz-columns: 32em 2;
 	-webkit-columns: 32em 2;
 }
+
+/*Special:CategoryTree*/
+body.mw-special-CategoryTree .oo-ui-defaultOverlay {
+	z-index: 200;
+}
+
